[tool.poetry]
name = "rofi-tpb"
version = "0.1.0"
description = ""
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tpblite = "^0.6"
dynmen = "^0.1.5"
traitlets = "^5.0.4"
lxml = "^4.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
isort = "^5.6.4"

[tool.poetry.scripts]
rofi-tpb = 'rofi_tpb.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
