[tool.poetry]
name = "rofi-tpb"
version = "0.2.6"
description = "Dynamic menu interface for TPB, built with rofi in mind."
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Topic :: Utilities",
]
keywords = ["thepiratebay", "tpb", "rofi", "dmenu"]
readme = "README.md"
repository = "https://github.com/loiccoyle/rofi-tpb"

[tool.poetry.dependencies]
python = "^3.6.2"
tpblite = "^0.8.0"
dynmen = "^0.1.5"
traitlets = "<5.0.0"
lxml = "^4.6.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pylint = "^2.9.3"
isort = "^5.9.1"
pytest = "^6.2.4"

[tool.poetry.scripts]
rofi-tpb = 'rofi_tpb.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
